# anchor-version-detector

./: AGENTS.md  Cargo.toml  README.md  TODO.md
examples/: detect_repo.rs  list_rules.rs  resolve_partial.rs
sh/: current-anchor-environment.sh
src/: compatibility.rs  detect.rs  env.rs  lib.rs  main.rs  parse.rs  types.rs
workflows/: sync.md
