[package]
name = "anchor-version-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
serde_json = "1.0"
semver = "1.0"

[profile.dev]
overflow-checks = true
lto = "fat"

[profile.release]
overflow-checks = true
lto = "fat"
opt-level = 3
strip = "debuginfo"
incremental = true

[lints.clippy]
# ==== Security-related clippy lints
arithmetic_side_effects = "warn"
as_conversions = "warn"
